--- a/views/main.html
+++ b/views/main.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="AnotherProksY's profile" />
-    <link rel="stylesheet" href="static/tacit.min.css" />
-    <link rel="stylesheet" href="static/styles.css" />
-    <link rel="icon" type="image/png" href="static/logo.png" />
+    <link rel="stylesheet" href="static/css/tacit.min.css" />
+    <link rel="stylesheet" href="static/css/styles.css" />
+    <link rel="icon" type="image/png" href="static/images/logo.png" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <header>
             <nav>
                 <figure>
-                    <img src="static/logo.png" alt="logo" style="max-height: 100px;">
+                    <img src="static/images/logo.png" alt="logo" style="max-height: 100px;">
                 </figure>
                 <h1>AnotherProksY</h1>
             </nav>
@@ -72,13 +72,13 @@
             <br />
             <h2>Tic-tac-toe</h2>
             <p>The Web version of the game Tic-Tac-Toe, created on the Python Django</p>
-            <p><img src="static/tic-tac-toe.png" alt="tic-tac-toe"></p>
+            <p><img src="static/images/tic-tac-toe.png" alt="tic-tac-toe"></p>
             <h2>Easy-LDAP</h2>
             <p>Easy to use wrapper for commandline LDAP tools</p>
-            <p><img src="static/ez-ldap.png" alt="ez-ldap"></p>
+            <p><img src="static/images/ez-ldap.png" alt="ez-ldap"></p>
             <h2>Ez-Window</h2>
             <p>Simple and small plugin for easy resizing and fast navigation between windows</p>
-            <p><img src="static/ez-window.png" alt="ez-window"></p>
+            <p><img src="static/images/ez-window.png" alt="ez-window"></p>
         </div>
 
         <footer>
