Add Google Analytics to main.html

--- a/views/main.html
+++ b/views/main.html
@@ -2,6 +2,19 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SDSPZB0X7G"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-SDSPZB0X7G');
+    </script>
+
     <title>AnotherProksY</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -44,8 +57,7 @@
                     <div class="container">
                         <h2>Contacts</h2>
                         <p>
-                            <b>✉️ Mail: </b><a
-                                href="mailto:k.fazilov@icloud.com">k.fazilov@icloud.com</a><br />
+                            <b>✉️ Mail: </b><a href="mailto:k.fazilov@icloud.com">k.fazilov@icloud.com</a><br />
                             <b>📨️ Mail: </b><a href="mailto:k.fazilov@qiwi.com">k.fazilov@qiwi.com</a><br />
                             <b>💬 Telegram: </b><a href="https://t.me/AnotherProksy">AnotherProksY</a><br />
                         </p>
