Code style fixes based on Codacy recommendations

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,45 +1,45 @@
 @font-face {
-    font-family: Pixel;
-    src: url(../fonts/SmallestPixel-7.ttf);
+  font-family: Pixel;
+  src: url(../fonts/SmallestPixel-7.ttf);
 }
 
 @font-face {
-    font-family: Mono;
-    src: url(../fonts/JetMono.ttf);
+  font-family: Mono;
+  src: url(../fonts/JetMono.ttf);
 }
 
 h1 {
-    font-family: Pixel;
-    font-size: 60px;
-    text-shadow: 0px 5px 15px rgba(200, 200, 200, 1);
+  font-family: Pixel, sans-serif;
+  font-size: 60px;
+  text-shadow: 0 5px 15px rgba(200, 200, 200, 1);
 }
 
 h2 {
-    font-family: Mono;
-    font-weight: bold;
-    text-shadow: 0px 5px 15px rgba(220, 220, 220, 1);
+  font-family: Mono, sans-serif;
+  font-weight: bold;
+  text-shadow: 0 5px 15px rgba(220, 220, 220, 1);
 }
 
 hr {
-    width: 30%;
-    margin: auto;
+  width: 30%;
+  margin: auto;
 }
 
 .info-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .items {
-    width: 300px;
+  width: 300px;
 }
 
 .container {
-    width: max-content;
-    margin: 0px auto;
+  width: max-content;
+  margin: 0 auto;
 }
 
 .container p {
-    text-align: left;
+  text-align: left;
 }
