--- a/src/views/main.html
+++ b/src/views/main.html
@@ -48,8 +48,8 @@
               <b>🧔🏾 Name: </b>Kamil Fazilov<br />
               <b>👴🏾 Age: </b>{{age}}<br />
               <b>🌍 Location: </b><a href="https://goo.gl/maps/HNTqQnYNykXL7mTYA">Moscow</a><br />
-              <b>💼 Working at: </b><a href="https://qiwi.com">QIWI</a><br />
-              <b>👨🏽‍💻 Position: </b>SYSOPS<br />
+              <!-- <b>💼 Working at: </b><a href="https://qiwi.com">QIWI</a><br /> -->
+              <!-- <b>👨🏽‍💻 Position: </b>SYSOPS<br /> -->
             </p>
           </div>
         </div>
@@ -58,7 +58,7 @@
             <h3>Contacts</h3>
             <p>
               <b>✉️ Mail: </b><a href="mailto:k.fazilov@icloud.com">k.fazilov@icloud.com</a><br />
-              <b>📨️ Mail: </b><a href="mailto:k.fazilov@qiwi.com">k.fazilov@qiwi.com</a><br />
+              <!-- <b>📨️ Mail: </b><a href="mailto:k.fazilov@qiwi.com">k.fazilov@qiwi.com</a><br /> -->
               <b>💬 Telegram: </b><a href="https://t.me/AnotherProksy">AnotherProksY</a><br />
             </p>
           </div>
